# Solutions

./: .gitignore  README.md
pyramid_23_08_04/: Cargo.toml  hyperfine_results.md  stack.yaml
pyramid_23_08_04/pyramid-haskell/: CHANGELOG.md  README.md  pyramid.cabal
pyramid_23_08_04/pyramid-haskell/app/: Main.hs
pyramid_23_08_04/pyramid-haskell/benchmark/: Main.hs
pyramid_23_08_04/pyramid-haskell/src/: Nitka.hs  Pyramid.hs
pyramid_23_08_04/pyramid-haskell/test/: Spec.hs
pyramid_23_08_04/pyramid-rust/src/: main.rs
