cabal-version:       3.0
name:                pyramid
version:             0.0.0.0
synopsis:            See README for more info
description:
    See README for more info.
    See README.md for more details.
license:             BSD-3-Clause
license-file:        LICENSE
author:              metaxis
maintainer:          metaxis <willgame@mail.ru>
copyright:           2023 metaxis
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.0.2

common common-options
  build-depends:       base ^>= 4.16.4.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Pyramid
  build-depends:
      containers
    , extra
    , vector

executable pyramid
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:
      pyramid
    , bytestring
  ghc-options:         -threaded
                       -rtsopts
                       -O2
                       -split-sections
                       -with-rtsopts=-N1
                       -with-rtsopts=-qn8
                       -with-rtsopts=-A64m
                       -with-rtsopts=-AL256m
                       -with-rtsopts=-I0
                       -with-rtsopts=-T

test-suite pyramid-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       pyramid
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark pyramid-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:
      pyramid
    , criterion
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -with-rtsopts=-qn8
                       -with-rtsopts=-A64m
                       -with-rtsopts=-AL256m
                       -with-rtsopts=-I0
                       -with-rtsopts=-T
